Error message style changed, added icon in error message, bi fixed alignments

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -202,3 +202,10 @@ label.optional {
     --ag-borders-row: solid 1px;
     --ag-row-border-color: #dee2e6;
 }
+
+
+//Fix for Bootstrap Icon alignment
+.bi {
+  vertical-align: -0.125em;
+  margin-bottom: calc(-0.125em / 2);
+}
